--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gorhom/bottom-sheet": "^4.4.5",
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/auth": "^16.4.6",
+    "@react-native-firebase/firestore": "^16.4.6",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@types/react": "~18.0.24",
@@ -23,6 +24,7 @@
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "lottie-react-native": "^5.1.4",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
